# summarizer

./: .env.example  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  summarizer.sln
.github/workflows/: build-client-image.yaml  build-fastapi-image.yaml  build-images.yaml  build-server-image.yaml  deploy-client.yaml  deploy-fastapi.yaml  deploy-locally.yaml  deploy-server.yaml  deploy-to-aci.yaml  sync.yaml
backend/: pom.xml  prod.Dockerfile
ci/: docker-compose.yaml  docker-compose.yml
ci/migrations/: Dockerfile
client/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  Dockerfile.dev  angular.json  dev.Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  prod.Dockerfile  remix.config.js  tailwind.config.ts
docs/: REFERENCE.md
fastapi/: Dockerfile  README.md  main.py  requirements.in  requirements.txt
frontend/: dev.Dockerfile  prod.Dockerfile
llm-api/: prod.Dockerfile  pyproject.toml
llm-api/llm_api/: main.py
llm-microservice/: main.py  prod.Dockerfile  pyproject.toml
server/: Dockerfile  Program.cs  copy.Dockerfile  dev.Dockerfile  migration.Dockerfile  pom.xml  prod.Dockerfile  server.csproj  server.http  spring.Dockerfile
server/Context/: SummarizerDbContext.cs
server/Controllers/: ArticleSummaryController.cs  BaseController.cs  LogoutController.cs  SummarizeController.cs  UserController.cs  UserInfo.cs  WeatherForecastController.cs
server/Data/: SummarizerDbContext.cs
server/Migrations/: 20241015205729_InitialCreate.Designer.cs  20241015205729_InitialCreate.cs  (+7 more)
(+90 files in other folders)
