[tool.poetry]
name = "llm-api"
version = "0.1.0"
description = ""
authors = [
    "Miguel A. Cuevas G. <81328194+secretarybird97@users.noreply.github.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.42.4"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
torch = "^2.3.1"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
